--- a/pluginlib/docker/compose.yml
+++ b/pluginlib/docker/compose.yml
@@ -1,11 +1,18 @@
 services:
-  polygon_demp:
+  polygon_demo:
     container_name: polygon_demo
+    extends: .common
     image: polygon_demo
+    build:
+      target: polygon_demo
+    command: ros2 run polygon_base area_node
+
+  .common:
+    image: pluginlib
     build:
       dockerfile: docker/Dockerfile
       context: ..
-      target: polygon_demo
+      target: base
     runtime: nvidia
     environment:
       ROS_DOMAIN_ID: $ROS_DOMAIN_ID
@@ -20,4 +27,3 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - $HOME/.Xauthority:/root/.Xauthority
-    command: ros2 run polygon_base area_node
