move docker stuff to toplevel to reuse it

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -48,9 +48,9 @@ RUN echo 'source $ROS_WS/install/setup.bash' >>  /root/.bashrc
 
 
 
-FROM base as polygon_demo
-COPY polygon_base $ROS_WS/src/polygon_base
-COPY polygon_plugins $ROS_WS/src/polygon_plugins
+FROM base AS polygon_demo
+COPY pluginlib/polygon_base $ROS_WS/src/polygon_base
+COPY pluginlib/polygon_plugins $ROS_WS/src/polygon_plugins
 
 WORKDIR $ROS_WS
 RUN source /opt/ros/$ROS_DISTRO/setup.bash && colcon build --packages-select polygon_base polygon_plugins
