--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/ros2_demos"]
 	path = submodules/ros2_demos
 	url = https://github.com/ros2/demos.git
+[submodule "submodules/ros2_example_interfaces"]
+	path = submodules/ros2_example_interfaces
+	url = https://github.com/ros2/example_interfaces
