--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -64,3 +64,7 @@ RUN source /opt/ros/$ROS_DISTRO/setup.bash && colcon build --packages-select poi
 FROM base AS zero_copy_demo
 COPY zero_copy_transport/zero_copy_demo $ROS_WS/src/zero_copy_demo
 RUN source /opt/ros/$ROS_DISTRO/setup.bash && colcon build --packages-select zero_copy_demo
+
+FROM base AS sync_demo
+COPY message_filters/sync_demo $ROS_WS/src/sync_demo
+RUN source /opt/ros/$ROS_DISTRO/setup.bash && colcon build --packages-select sync_demo
