--- a/docker/common_nvidia.yml
+++ b/docker/common_nvidia.yml
@@ -11,7 +11,7 @@ services:
       DISPLAY: $DISPLAY
       QT_X11_NO_MITSHM: "1"
       NVIDIA_VISIBLE_DEVICES: all
-      NVIDI_DRIVER_CAPABILITIES: compute,video,utility,graphics
+      NVIDIA_DRIVER_CAPABILITIES: compute,video,utility,graphics
     network_mode: host
     ipc: host
     privileged: true
@@ -19,4 +19,5 @@ services:
     volumes:
       - /tmp/.X11-unix:/tmp/.X11-unix
       - $HOME/.Xauthority:/root/.Xauthority
+      - /run/user/1000/gdm/Xauthority:/root/.Xauthority:ro
     command: tail -f /dev/null
