--- a/pointcloud/compose.yml
+++ b/pointcloud/compose.yml
@@ -8,3 +8,13 @@ services:
     build:
       target: pointcloud_demo
     command: ros2 component standalone pointcloud_demo DemoComponent -p leaf_size:=0.2 -r cloud_in:=/camera/points -r cloud_out:=/camera/down_sampled
+
+  pointcloud_segmentation:
+    container_name: pointcloud_segmentation
+    extends:
+      file: ../docker/common.yml
+      service: common
+    image: pointcloud_demo
+    build:
+      target: pointcloud_demo
+    command: ros2 launch pointcloud_segmentation pointcloud_segmentation.launch.py
