--- a/.gitmodules
+++ b/.gitmodules
@@ -14,5 +14,5 @@
 	path = submodules/ros2_testing
 	url = https://github.com/ros2/ros_testing.git
 [submodule "ros2_cheats_sheet"]
-	path = ros2_cheats_sheet
+	path = submodules/ros2_cheats_sheet
 	url = https://github.com/ubuntu-robotics/ros2_cheats_sheet
