add more params

--- a/femto/compose.yml
+++ b/femto/compose.yml
@@ -15,4 +15,5 @@ services:
     #command: tail -f /dev/null
     #command: ros2 run orbbec_camera list_devices_node
     #command: ros2 launch  orbbec_camera femto_mega.launch.py
-    command: bash -c "rviz2& ros2 launch orbbec_camera femto_mega.launch.py depth_registration:=true enable_d2c_viewer:=true"
+    #command: bash -c "rviz2& ros2 launch orbbec_camera femto_mega.launch.py depth_registration:=true enable_d2c_viewer:=true"
+    command: bash -c "rviz2& rqt& ros2 launch orbbec_camera femto_mega.launch.py depth_registration:=true color_width:=2560 color_height:=1440 color_format:=rgb888 color_fps:=5 enable_depth_scale:=false enable_colored_point_cloud:=true enable_color:=true"
